# AOC24

./: .gitignore
Day1/: CMakeLists.txt
Day1/src/: Parser.cpp  Parser.hpp  main.cpp
Day2/: CMakeLists.txt
Day2/res/: inputd
Day2/src/: Reports.cpp  Reports.hpp  main.cpp
Day3/src/: Mul.cpp  Mul.hpp  main.cpp
Day4/: CMakeLists.txt
Day4/src/: main.cpp
Day5/: CMakeLists.txt
Day5/src/: Timing.hpp  main.cpp
src/: CMakeLists.txt
